@@ -14,6 +14,8 @@ src_libout123_libout123_la_SOURCES = \
   src/libout123/out123_int.h \
   src/libout123/wav.c \
   src/libout123/wav.h \
+  src/libout123/hextxt.c \
+  src/libout123/hextxt.h \
   src/libout123/wavhead.h
 
 if BUILD_BUFFER
