@@ -8,6 +8,7 @@
 
 #include "out123_int.h"
 #include "wav.h"
+#include "hextxt.h"
 #ifndef NOXFERMEM
 #include "buffer.h"
 static int have_buffer(out123_handle *ao)
@@ -822,6 +823,28 @@ static int open_fake_module(out123_handle *ao, const char *driver)
 		ao->drain = wav_drain;
 		ao->close = au_close;
 	}
+	else
+	if(!strcmp("hex", driver))
+	{
+		ao->propflags &= ~OUT123_PROP_LIVE;
+		ao->open  = hex_open;
+		ao->get_formats = hex_formats;
+		ao->write = hex_write;
+		ao->flush = builtin_nothing;
+		ao->drain = hextxt_drain;
+		ao->close = hextxt_close;
+	}
+	else
+	if(!strcmp("txt", driver))
+	{
+		ao->propflags &= ~OUT123_PROP_LIVE;
+		ao->open  = txt_open;
+		ao->get_formats = txt_formats;
+		ao->write = txt_write;
+		ao->flush = builtin_nothing;
+		ao->drain = hextxt_drain;
+		ao->close = hextxt_close;
+	}
 	else return OUT123_ERR;
 
 	return OUT123_OK;
@@ -938,6 +961,10 @@ out123_drivers(out123_handle *ao, char ***names, char ***descr)
 		,	"au", "Sun AU file (builtin)", &count )
 	||	stringlists_add( &tmpnames, &tmpdescr
 		,	"test", "output into the void (builtin)", &count )
+	||	stringlists_add( &tmpnames, &tmpdescr
+		,	"hex", "interleaved hex printout (builtin)", &count )
+	||	stringlists_add( &tmpnames, &tmpdescr
+		,	"txt", "plain text printout, a column per channel (builtin)", &count )
 	)
 		if(!AOQUIET)
 			error("OOM");
